# ascendo-ai-task

./: .gitignore  README.md  pyproject.toml
src/ascendo_conf_agent/: cli.py  config.py  conversational.py  types.py
src/ascendo_conf_agent/graph/nodes/: enrich.py  export.py  extractor.py  fetcher.py  fit.py  normalizer.py  planner.py  qa.py
src/ascendo_conf_agent/llm/: client.py
src/ascendo_conf_agent/llm/prompts/: classify_links.md  extract_entities.md  prospect_fit.md  prospect_fit_batch.md
src/ascendo_conf_agent/scraping/: parse_helpers.py  playwright_fetch.py
src/ascendo_conf_agent/utils/: text.py  urls.py
